log

Thu 17 Aug 2023 10:44:58 PM UTC: 
 exercises.c | 153 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 144 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:69:10: error: function returns address of local variable [-Werror=return-local-addr]
   69 |   return listaPar;
      |          ^~~~~~~~
exercises.c: In function ‘checkSorted’:
exercises.c:149:1: error: control reaches end of non-void function [-Werror=return-type]
  149 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6c41012
